lang/perl/tiarra: fix import url.

--- a/doc/default.css
+++ b/doc/default.css
@@ -1,5 +1,5 @@
 /* $Id: default.css,v 1.1 2003/08/04 09:29:21 admin Exp $ */
-@import url(../../common/style/blue/base.css);
+@import url(http://www.clovery.jp/common/style/blue/base.css);
 
 /* toc-group */
 .toc-group
